ADD address - error message with specific fields to check

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -90,6 +90,7 @@ checkoutCheckAcceptGtc = "Bitte AGB, Widerrufsrecht und Datenschutzerklärung ak
 checkoutCheckPaymentProvider = "Bitte Zahlungsart auswählen."
 checkoutCheckShippingProfile = "Bitte Versanddienstleister auswählen."
 checkoutCheckInvoiceAddress = "Bitte Rechnungsaddresse auswählen."
+checkoutCheckAddressFormFields = "Bitte folgende Felder überprüfen: :fields."
 checkoutChooseOur = "Bitte nehmen Sie unsere :gtc, :cancellation und :policy zur Kenntnis."
 checkoutContactWish = "Hinweise und Wünsche"
 checkoutContactWishMessage = "Geben Sie hier Ihre Nachricht an uns ein."
