--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -90,6 +90,7 @@ checkoutCheckAcceptGtc = "Please accept the terms and conditions, cancellation r
 checkoutCheckPaymentProvider = "Please select a payment method."
 checkoutCheckShippingProfile = "Please select a shipping service provider."
 checkoutCheckInvoiceAddress = "Please select an invoice address."
+checkoutCheckAddressFormFields = "Please fill in the following fields: :fields."
 checkoutChooseOur = "Please accept our :gtc, :cancellation and :policy."
 checkoutContactWish = "Notes and requests"
 checkoutContactWishMessage = "Enter your message to us here."
