ADD input property to configure items per page on item lists

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -106,6 +106,8 @@ itemListListTypeTaglist = "Artikel mit Tags"
 itemListListTypeTooltip = "Art der Artikelliste wählen."
 itemListMaxItemsLabel = "Maximale Anzahl der angezeigten Artikel"
 itemListMaxItemsTooltip = "Maximale Zahl der in der Liste angezeigten Artikel eingeben."
+itemListItemsPerPageLabel = "Anzahl der sichtbaren Artikel"
+itemListItemsPerPageLabel = "Anzahl der Artikeln, die nebeneinander dargestellt werden sollen"
 itemListPlaceholderItemName = "Artikelname"
 itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
