--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -106,6 +106,8 @@ itemListListTypeTaglist = "Items with tags"
 itemListListTypeTooltip = "Select the type of item list."
 itemListMaxItemsLabel = "Maximum number of displayed items"
 itemListMaxItemsTooltip = "Enter the maximum number of items displayed on the list."
+itemListItemsPerPageLabel = "Number of visible items."
+itemListItemsPerPageLabel = "Number of items which should be displayed in a row."
 itemListPlaceholderItemName = "Item name"
 itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
