ADD availability mapping to config

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -1,3 +1,25 @@
+availability1=Verfügbarkeit 1
+availability10=Verfügbarkeit 10
+availability2=Verfügbarkeit 2
+availability3=Verfügbarkeit 3
+availability4=Verfügbarkeit 4
+availability5=Verfügbarkeit 5
+availability6=Verfügbarkeit 6
+availability7=Verfügbarkeit 7
+availability8=Verfügbarkeit 8
+availability9=Verfügbarkeit 9
+availabilityDiscontinued=Abgekündigt (Discontinued)
+availabilityInStock=Auf Lager (InStock)
+availabilityInStoreOnly=Nur im Ladengeschäft verfügbar (InStoreOnly)
+availabilityLimitedAvailability=Begrenzt verfügbar (LimitedAvailability)
+availabilityMapping=Verfügbarkeiten für Suchmaschinen festlegen
+availabilityNotSet=Verfügbarkeit wählen
+availabilityOnlineOnly=Nur online verfügbar (OnlineOnly)
+availabilityOutOfStock=Nicht auf Lager (OutOfStock)
+availabilityPreOrder=Vorbestellbar (PreOrder)
+availabilityPreSale=Vorverkauf (PreSale)
+availabilitySoldOut=Ausverkauft (SoldOut)
+
 globalTab = Global
 headerCompanyNameLabel = Name des Webshops
 headerCompanyLogoLabel = Firmenlogo
