--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -1,3 +1,25 @@
+availability1=Availability 1
+availability10=Availability 10
+availability2=Availability 2
+availability3=Availability 3
+availability4=Availability 4
+availability5=Availability 5
+availability6=Availability 6
+availability7=Availability 7
+availability8=Availability 8
+availability9=Availability 9
+availabilityDiscontinued=Discontinued
+availabilityInStock=In stock
+availabilityInStoreOnly=In store only
+availabilityLimitedAvailability=Limited availability
+availabilityMapping=Specify availabilities for search engines
+availabilityNotSet=Select availability
+availabilityOnlineOnly=Online only
+availabilityOutOfStock=Out of stock
+availabilityPreOrder=Pre-order
+availabilityPreSale=Pre-sale
+availabilitySoldOut=Sold out
+
 globalTab = Global
 headerCompanyNameLabel = Name of your store
 headerCompanyLogoLabel = Company logo
