- modified to bundled form erros

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -124,6 +124,7 @@ contactEditMessage = "Please enter a message."
 contactEditSubject = "Please enter a subject."
 contactAcceptFormPrivacyPolicy = "Please accept the Privacy:hyphen policy."
 contactEnterConfirmEmail = "Please enter a valid email address."
+contactCheckFormFields = "Please fill in the following fields: :fields."
 contactMail = "Email"
 contactMessage = "Message"
 contactMetaDescription = ""
