--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -124,6 +124,7 @@ contactEditMessage = "Bitte geben Sie eine Nachricht ein."
 contactEditSubject = "Bitte geben Sie einen Betreff ein."
 contactAcceptFormPrivacyPolicy = "Bitte akzeptieren Sie die Daten:hyphenschutz:hyphenerklärung."
 contactEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
+contactCheckFormFields = "Bitte folgende Felder überprüfen: :fields."
 contactMail = "E-Mail"
 contactMessage = "Nachricht"
 contactMetaDescription = ""
