ADD newsletter functionality and widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -98,3 +98,5 @@ textPlaceholder = "Über Texteditor bearbeiten"
 titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
+; Newsletter
+newsletterLabel = "Newsletter"
