--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -98,3 +98,5 @@ textPlaceholder = "Edit via text editor"
 titleBarLabel = "Title bar"
 titleBarTextLabel = "Title bar text"
 titleBarTextTooltip = "Enter the title bar text."
+; Newsletter
+newsletterLabel = "Newsletter"
