--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -104,10 +104,10 @@ itemListListTypeLabel = "Art der Artikelliste"
 itemListListTypeLastseen = "Zuletzt angesehene Artikel"
 itemListListTypeTaglist = "Artikel mit Tags"
 itemListListTypeTooltip = "Art der Artikelliste wählen."
-itemListMaxItemsLabel = "Maximale Anzahl der angezeigten Artikel"
+itemListMaxItemsLabel = "Maximale Anzahl an Artikeln"
 itemListMaxItemsTooltip = "Maximale Zahl der in der Liste angezeigten Artikel eingeben."
 itemListItemsPerPageLabel = "Anzahl der sichtbaren Artikel"
-itemListItemsPerPageLabel = "Anzahl der Artikeln, die nebeneinander dargestellt werden sollen"
+itemListItemsPerPageTooltip = "Anzahl der Artikel, die nebeneinander dargestellt werden sollen"
 itemListPlaceholderItemName = "Artikelname"
 itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
