--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -355,6 +355,10 @@ pageNotFoundHomepage = "Startseite"
 pageNotFoundOops = "Ups, ein Fehler!"
 pageNotFoundPage = "Die Seite, die du aufgerufen hast, wurde nicht gefunden."
 ; pageNotFound - Nicht gefunden
+; newsletter
+newsletterFirstName = "Vorname"
+newsletterLastName = "Nachname"
+newsletterEmail = "E-Mail"
 ; notifications - Benachrichtigungen
 notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht mehr erreicht."
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
