--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -355,6 +355,9 @@ pageNotFoundHomepage = "Homepage"
 pageNotFoundOops = "Oops, something went terribly wrong!"
 pageNotFoundPage = "The requested page was not found."
 ; pageNotFound - Not found
+newsletterFirstName = "First name"
+newsletterLastName = "Last name"
+newsletterEmail = "Email"
 ; notifications - Notifications
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 notificationsCalculateShippingFailed = "Error while calculating shipping costs. Please contact the provider."
