--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -166,6 +166,10 @@ titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
 ; Newsletter
 newsletterLabel = "Newsletter"
+newsletterTitleLabel = "Titel"
+newsletterDescriptionLabel = "Beschreibung"
+newsletterShowNameInputsLabel = "Eingabefelder für Vor- und Nachname anzeigen"
+newsletterShowPrivacyPolicyCheckboxLabel = "Checkbox zur Einwilligung der Datenschutzerklärung anzeigen"
 ; Top bar
 topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
 topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
