--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -358,6 +358,14 @@ pageNotFoundPage = "The requested page was not found."
 newsletterFirstName = "First name"
 newsletterLastName = "Last name"
 newsletterEmail = "Email"
+newsletterAcceptPrivacyPolicy = "I hereby confirm that I have read the :policy."
+newsletterSubscribeButtonLabel = "Subscribe"
+newsletterUnsubscribeButtonLabel = "Unsubscribe"
+newsletterSuccessMessage = "You have been successfully subscribed to the newsletter."
+newsletterErrorMessage = "You have not been subscribed to the newsletter."
+newsletterOptOutSuccessMessage = "You have successfully unsubscribed from our newsletter."
+newsletterOptOutInfoText = "Please enter your E-mail address to unsubscribe from our newsletter."
+newsletterOptInMessage = "Your email address has been confirmed."
 ; notifications - Notifications
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
 notificationsCalculateShippingFailed = "Error while calculating shipping costs. Please contact the provider."
