--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -166,6 +166,10 @@ titleBarTextLabel = "Title bar text"
 titleBarTextTooltip = "Enter the title bar text."
 ; Newsletter
 newsletterLabel = "Newsletter"
+newsletterTitleLabel = "Title"
+newsletterDescriptionLabel = "Description"
+newsletterShowNameInputsLabel = "Show input fields for first and last name"
+newsletterShowPrivacyPolicyCheckboxLabel = "Show checkbox for accepting the privacy policy"
 ; Top bar
 topBarBasketValuesBoth = "Value and quantity of items"
 topBarBasketValuesLabel = "Show shopping cart information"
