--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -187,7 +187,7 @@ topBarSearchStyleLabel = "Display of the search"
 topBarSearchStyleOnDemand = "Fold in search"
 topBarSearchStylePermanent = "Permanently display search"
 topBarSearchStyleTooltip = "Adjust the display of the search."
-topBarShowItemImagesLabel = "Display item images in search suggenstions"
+topBarShowItemImagesLabel = "Display item images in search suggestions"
 ; Navigation
 navigationCompanyLogoUrlLabel = "Company logo"
 navigationCompanyLogoUrlTooltip = "Select company logo for display in your online store."
