FIX missing translation string

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -364,8 +364,9 @@ newsletterSubscribeButtonLabel = "Abonnieren"
 newsletterUnsubscribeButtonLabel = "Abmelden"
 newsletterSuccessMessage = "Die Newsletter-Anmeldung war erfolgreich."
 newsletterErrorMessage = "Die Newsletter-Anmeldung war nicht erfolgreich."
-newsletterOptOutSuccessMessage = "Die Abmeldung vom Newsletter war erfolgreich."
 newsletterOptOutInfoText = "Bitte geben Sie Ihre E-Mail-Addresse ein, um sich vom Newsletter abzumelden."
+newsletterOptOutSuccessMessage = "Die Abmeldung vom Newsletter war erfolgreich."
+newsletterOptOutTitle = "Newsletter Abmeldung"
 newsletterOptInMessage = "Ihre Email-Adresse wurde bestätigt."
 ; notifications - Benachrichtigungen
 notificationRemoveCouponMinimumOrderValueIsNotReached = "Der eingelöste Gutschein wurde entfernt. Der Mindestbestellwert wird nicht mehr erreicht."
