--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -365,6 +365,7 @@ newsletterSuccessMessage = "You have been successfully subscribed to the newslet
 newsletterErrorMessage = "You have not been subscribed to the newsletter."
 newsletterOptOutSuccessMessage = "You have successfully unsubscribed from our newsletter."
 newsletterOptOutInfoText = "Please enter your E-mail address to unsubscribe from our newsletter."
+newsletterOptOutTitle = "Newsletter ABMELDUNG"
 newsletterOptInMessage = "Your email address has been confirmed."
 ; notifications - Notifications
 notificationRemoveCouponMinimumOrderValueIsNotReached = "The redeemed coupon has been removed. The minimum order value was not reached."
