CHANGE Widget.properties - fix typo

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -216,4 +216,4 @@ navigationNavigationStyleMegaMenu = "Mega menu"
 navigationNavigationStyleNormal = "Normal"
 navigationNavigationStyleTooltip = "Select style of the category navigation."
 ; Separator
-separatorLabel = "Deviding line"
+separatorLabel = "Dividing line"
