remove and fix sums for rebate

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -66,6 +66,7 @@ basketRebate = "Rabatt auf Warenwert"
 basketShippingCosts = "Versandkosten"
 basketShowLess = "Weniger"
 basketShowMore = "Mehr"
+basketSubTotal = "Zwischensumme"
 basketSum = "Summe"
 basketTotalSum = "Gesamtsumme"
 basketValue = "Warenwert"
