--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -66,6 +66,7 @@ basketRebate = "Discount on value of items"
 basketShippingCosts = "Shipping"
 basketShowLess = "Less"
 basketShowMore = "More"
+basketSubTotal = "Subtotal"
 basketSum = "Total"
 basketTotalSum = "Total"
 basketValue = "Value of items"
