--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -396,10 +396,12 @@ orderConfirmationPaymentStatus_prepaid = "Im Voraus bezahlt"
 orderConfirmationPaymentStatus_unpaid = "Nicht bezahlt"
 orderConfirmationPeace = "Stückzahl"
 orderConfirmationPricePerPiece = "Einzelpreis"
+orderConfirmationRebate = "Rabatt auf Warenwert"
 orderConfirmationSameAsInvoice = "Lieferadresse gleich Rechnungsadresse"
 orderConfirmationShippingAddress = "Lieferadresse"
 orderConfirmationShippingCosts = "Versandkosten"
 orderConfirmationShippingProfile = "Versandart"
+orderConfirmationSubTotal = "Zwischensumme"
 orderConfirmationStatus = "Status"
 orderConfirmationThanks = "Vielen Dank!"
 orderConfirmationTotal = "Gesamt"
