--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -395,11 +395,13 @@ orderConfirmationPaymentStatus_prepaid = "Prepaid"
 orderConfirmationPaymentStatus_unpaid = "Not paid"
 orderConfirmationPeace = "Quantity"
 orderConfirmationPricePerPiece = "Price per piece"
+orderConfirmationRebate = "Discount on value of items"
 orderConfirmationSameAsInvoice = "Delivery address same as invoice address"
 orderConfirmationShippingAddress = "Delivery address"
 orderConfirmationShippingCosts = "Shipping"
 orderConfirmationShippingProfile = "Shipping method"
 orderConfirmationStatus = "Status:"
+orderConfirmationSubTotal = "Subtotal"
 orderConfirmationThanks = "Thank you!"
 orderConfirmationTotal = "Total"
 orderConfirmationVAT = "VAT"
