CHANGE BreadcrumbWidget - add new option to show/hide the breadcrumbs on content categories

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -2,6 +2,7 @@
 breadcrumbIsFixedLabel = "Beim Scrollen der Seite fixieren"
 breadcrumbLabel = "Breadcrumb-Navigation"
 breadcrumbShowOnCheckoutLabel = "In der Kasse anzeigen"
+breadcrumbShowOnContentCategoryLabel = "Auf Content-Kategorien anzeigen"
 breadcrumbShowOnHomepageLabel = "Auf der Startseite anzeigen"
 breadcrumbShowOnMyAccountLabel = "Im Bereich Mein Konto anzeigen"
 ; Container
