--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -2,6 +2,7 @@
 breadcrumbIsFixedLabel = "Fix when scrolling the page"
 breadcrumbLabel = "Breadcrumb navigation"
 breadcrumbShowOnCheckoutLabel = "Display in checkout"
+breadcrumbShowOnContentCategoryLabel = "Display in content categories"
 breadcrumbShowOnHomepageLabel = "Display on homepage"
 breadcrumbShowOnMyAccountLabel = "Display in My account area"
 ; Container
