--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -164,6 +164,12 @@ itemLoadingAnimationTypeBars = Ladeanimation mit Balken
 itemLoadingAnimationTypeSpinner = Ladeanimation mit Spinner
 itemShowCategoryImageLabel = Vorschaubild in der Kategorieansicht anzeigen
 itemShowCategoryDescriptionLabel = Beschreibung der Kategorie in der Kategorieansicht anzeigen
+itemShowCategoryDescriptionTopLabel = Kategoriebeschreibung über Artikelliste anzeigen
+itemShowCategoryDescriptionBottomLabel = Kategoriebeschreibung unter Artikelliste anzeigen
+itemShowCategoryDescriptionNone = Keine
+itemShowCategoryDescription1 = Beschreibung 1
+itemShowCategoryDescription2 = Beschreibung 2
+itemShowCategoryDescriptionBoth = Beide
 itemRequireAllPropertiesLabel = Alle Bestellmerkmale erfordern, bevor ein Artikel in den Warenkorb gelegt werden kann
 itemShowCategoryFilterLabel = Kategorien als Filteroptionen bei Suchergebnissen anzeigen
 
