--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -164,6 +164,12 @@ itemLoadingAnimationTypeBars = Bars
 itemLoadingAnimationTypeSpinner = Spinner
 itemShowCategoryImageLabel = Show category image in category view
 itemShowCategoryDescriptionLabel = Show category description in category view
+itemShowCategoryDescriptionTopLabel = Show category decription above item list
+itemShowCategoryDescriptionBottomLabel = Show category description below item list
+itemShowCategoryDescriptionNone = None
+itemShowCategoryDescription1 = Description 1
+itemShowCategoryDescription2 = Description 2
+itemShowCategoryDescriptionBoth = Both
 itemRequireAllPropertiesLabel = Require all order properties before adding an item to shopping cart
 itemShowCategoryFilterLabel = Show categories as filter options for search results
 
