FIX remove basket items without lang in the selected language

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -378,6 +378,7 @@ notificationsItemBundleSplitted = "Artikelpaket wurde aufgeteilt."
 notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
 notificationsItemOutOfStock = "Kein ausreichender Warenbestand vorhanden"
 notificationsNotEnoughStockItem = "Für die gewählte Artikelmenge ist nicht genügend Bestand verfügbar."
+notificationsBasketItemsRemovedForLanguage = "Es wurden Artikel aus Ihrem Warenkorb entfernt, da diese nicht in der ausgewählten Sprache verfügbar sind."
 ; notifications - Benachrichtigungen
 ; orderConfirmation - Auftragsbestätigung
 orderConfirmation = "Bestellbestätigung"
