ADD newsletter folder setting for newsletter widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -173,6 +173,7 @@ newsletterTitleLabel = "Titel"
 newsletterDescriptionLabel = "Beschreibung"
 newsletterShowNameInputsLabel = "Eingabefelder für Vor- und Nachname anzeigen"
 newsletterShowPrivacyPolicyCheckboxLabel = "Checkbox zur Einwilligung der Datenschutzerklärung anzeigen"
+newsletterEmailFolderLabel = "E-Mail-Ordner ID"
 ; Top bar
 topBarBasketValuesBoth = "Warenwert und Anzahl der Artikel"
 topBarBasketValuesLabel = "Warenkorbinformationen anzeigen"
