--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -173,6 +173,7 @@ newsletterTitleLabel = "Title"
 newsletterDescriptionLabel = "Description"
 newsletterShowNameInputsLabel = "Show input fields for first and last name"
 newsletterShowPrivacyPolicyCheckboxLabel = "Show checkbox for accepting the privacy policy"
+newsletterEmailFolderLabel = "E-mail folder ID"
 ; Top bar
 topBarBasketValuesBoth = "Value and quantity of items"
 topBarBasketValuesLabel = "Show shopping cart information"
