--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -169,7 +169,7 @@ itemShowCategoryDescriptionBottomLabel = Kategoriebeschreibung unter Artikellist
 itemShowCategoryDescriptionNone = Keine
 itemShowCategoryDescription1 = Beschreibung 1
 itemShowCategoryDescription2 = Beschreibung 2
-itemShowCategoryDescriptionBoth = Beide
+itemShowCategoryDescriptionBoth = Beschreibung 1 und 2
 itemRequireAllPropertiesLabel = Alle Bestellmerkmale erfordern, bevor ein Artikel in den Warenkorb gelegt werden kann
 itemShowCategoryFilterLabel = Kategorien als Filteroptionen bei Suchergebnissen anzeigen
 
