--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -169,7 +169,7 @@ itemShowCategoryDescriptionBottomLabel = Show category description below item li
 itemShowCategoryDescriptionNone = None
 itemShowCategoryDescription1 = Description 1
 itemShowCategoryDescription2 = Description 2
-itemShowCategoryDescriptionBoth = Both
+itemShowCategoryDescriptionBoth = Description 1 and 2
 itemRequireAllPropertiesLabel = Require all order properties before adding an item to shopping cart
 itemShowCategoryFilterLabel = Show categories as filter options for search results
 
