lower case "privacy policy"

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -123,7 +123,7 @@ contactAcceptPrivacyPolicy = "I hereby confirm that I have read the :policy."
 contactCheckEntries = "Please check the entries."
 contactEditMessage = "Please enter a message."
 contactEditSubject = "Please enter a subject."
-contactAcceptFormPrivacyPolicy = "Please accept the Privacy policy."
+contactAcceptFormPrivacyPolicy = "Please accept the privacy policy."
 contactEnterConfirmEmail = "Please enter a valid email address."
 contactCheckFormFields = "Please fill in the following fields: :fields."
 contactMail = "Email"
