do rest calls not at same time

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -377,7 +377,7 @@ notificationsItemBundleSplitted = "Item bundle has been split."
 notificationsItemNotAdded = "The item could not be added."
 notificationsItemOutOfStock = "Insufficient stock"
 notificationsNotEnoughStockItem = "There is not enough stock available for the selected item quantity."
-notificationsBasketItemsRemovedForLanguage = "Items have been removed from your shopping cart because they are not available in the selected language."
+notificationsBasketItemsRemoved = "Items have been removed from your shopping cart because they are actual not available."
 ; notifications - Notifications
 ; orderConfirmation - Order confirmation
 orderConfirmation = "Order confirmation"
