add exception code

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -379,6 +379,7 @@ notificationsItemNotAdded = "Der Artikel konnte nicht hinzugefügt werden"
 notificationsItemOutOfStock = "Kein ausreichender Warenbestand vorhanden"
 notificationsNotEnoughStockItem = "Für die gewählte Artikelmenge ist nicht genügend Bestand verfügbar."
 notificationsBasketItemsRemoved = "Es wurden Artikel aus Ihrem Warenkorb entfernt, da diese aktuell nicht verfügbar sind."
+notificationsBasketItemsRemovedForLanguage = "Es wurden Artikel aus Ihrem Warenkorb entfernt, da diese nicht in der ausgewählten Sprache verfügbar sind."
 ; notifications - Benachrichtigungen
 ; orderConfirmation - Auftragsbestätigung
 orderConfirmation = "Bestellbestätigung"
