--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -378,6 +378,7 @@ notificationsItemNotAdded = "The item could not be added."
 notificationsItemOutOfStock = "Insufficient stock"
 notificationsNotEnoughStockItem = "There is not enough stock available for the selected item quantity."
 notificationsBasketItemsRemoved = "Items have been removed from your shopping cart because they are actual not available."
+notificationsBasketItemsRemovedForLanguage = "Items have been removed from your shopping cart because they are not available in the selected language."
 ; notifications - Notifications
 ; orderConfirmation - Order confirmation
 orderConfirmation = "Order confirmation"
