--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -159,6 +159,34 @@ listIconTooltip = "Icon für Listeneinträge auswählen."
 listLabel = "Liste"
 listTextLabel = "Listeneintrag"
 listTextTooltip = "Text für einen Listeneintrag eingeben."
+; Live Shopping
+liveShoppingLabel = "Live-Shopping"
+liveShoppingTitleLabel = "Titel"
+liveShoppingTitleTooltip = "Titel"
+liveShoppingDescriptionLabel = "Beschreibung"
+liveShoppingDescriptionTooltip = "Beschreibung"
+liveShoppingSelectionLabel = "Live-Shopping Auswahl"
+liveShoppingSelectionTooltip = "Live-Shopping Auswahl"
+liveShoppingSelectionValue1 = "Live-Shopping 1"
+liveShoppingSelectionValue2 = "Live-Shopping 2"
+liveShoppingSelectionValue3 = "Live-Shopping 3"
+liveShoppingSelectionValue4 = "Live-Shopping 4"
+liveShoppingSelectionValue5 = "Live-Shopping 5"
+liveShoppingSelectionValue6 = "Live-Shopping 6"
+liveShoppingSelectionValue7 = "Live-Shopping 7"
+liveShoppingSelectionValue8 = "Live-Shopping 8"
+liveShoppingSelectionValue9 = "Live-Shopping 9"
+liveShoppingSelectionValue10 = "Live-Shopping 10"
+liveShoppingSortingLabel = "Sortierung"
+liveShoppingSortingTooltip = "Sortierung"
+liveShoppingTimerLabel = "Timer und Bestand anzeigen"
+liveShoppingTimerTooltip = "Timer und Bestand anzeigen"
+liveShoppingTimerValueTimer = "Timer"
+liveShoppingTimerValueStock = "Bestand"
+liveShoppingTimerValueTimerAndStock = "Timer und Bestand"
+liveShoppingShowCrossPriceLabel = "Streichpreis anzeigen"
+liveShoppingCustomImagePathLabel = "Bildauswahl"
+liveShoppingCustomImagePathTooltip = "Bildauswahl"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
