--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -159,6 +159,34 @@ listIconTooltip = "Choose icon for list entries."
 listLabel = "List"
 listTextLabel = "List entry"
 listTextTooltip = "Enter text for a list entry."
+; Live Shopping
+liveShoppingLabel = "Live shopping"
+liveShoppingTitleLabel = "Title"
+liveShoppingTitleTooltip = "Title"
+liveShoppingDescriptionLabel = "Description"
+liveShoppingDescriptionTooltip = "Description"
+liveShoppingSelectionLabel = "Live shopping selection"
+liveShoppingSelectionTooltip = "Live shopping selection"
+liveShoppingSelectionValue1 = "Live shopping 1"
+liveShoppingSelectionValue2 = "Live shopping 2"
+liveShoppingSelectionValue3 = "Live shopping 3"
+liveShoppingSelectionValue4 = "Live shopping 4"
+liveShoppingSelectionValue5 = "Live shopping 5"
+liveShoppingSelectionValue6 = "Live shopping 6"
+liveShoppingSelectionValue7 = "Live shopping 7"
+liveShoppingSelectionValue8 = "Live shopping 8"
+liveShoppingSelectionValue9 = "Live shopping 9"
+liveShoppingSelectionValue10 = "Live shopping 10"
+liveShoppingSortingLabel = "Sorting"
+liveShoppingSortingTooltip = "Sorting"
+liveShoppingTimerLabel = "Display timer or stock"
+liveShoppingTimerTooltip = "Display timer or stock"
+liveShoppingTimerValueTimer = "Timer"
+liveShoppingTimerValueStock = "Stock"
+liveShoppingTimerValueTimerAndStock = "Timer and stock"
+liveShoppingShowCrossPriceLabel = "Display strikethrough price"
+liveShoppingCustomImagePathLabel = "Image selection"
+liveShoppingCustomImagePathTooltip = "Image selection"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Text editor"
