UPDATE live shopping styles

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -289,6 +289,15 @@ itemSearchResults = "Suchergebnisse für:"
 legalDisclosure = "Impressum"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
+; liveShopping - liveShopping
+liveShoppingOfferEndsIn = "Angebot endet in:"
+liveShoppingRemainingStock = "Noch :quantityRemaining von :quantityMax übrig"
+liveShoppingRebate = "Sie sparen :rebate%"
+liveShoppingDays = "Tage"
+liveShoppingHours = "Stunden"
+liveShoppingMinutes = "Minuten"
+liveShoppingSeconds = "Sekunden"
+; liveShopping - liveShopping
 ; login - Login
 login = "Anmelden"
 loginBackToLogin = "Zurück"
