--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -289,6 +289,15 @@ itemSearchResults = "Search results for:"
 legalDisclosure = "Legal disclosure"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
+; liveShopping - liveShopping
+liveShoppingOfferEndsIn = "Offer ends in:"
+liveShoppingRemainingStock = ":quantityRemaining of :quantityMax left"
+liveShoppingRebate = ":rebate% off"
+liveShoppingDays = "Days"
+liveShoppingHours = "Hours"
+liveShoppingMinutes = "Minutes"
+liveShoppingSeconds = "Seconds"
+; liveShopping - liveShopping
 ; login - Login
 login = "Log in"
 loginBackToLogin = "Back"
