FIX cross selling type bundle

--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -184,7 +184,7 @@ itemListsCrossSellingSortingLabel = Cross-Selling: Sorting
 itemListsCrossSellingTypeSimilar = Similar
 itemListsCrossSellingTypeAccessory = Accessory
 itemListsCrossSellingTypeReplacementPart = Replacement part
-itemListsCrossSellingTypeCollection = Collection
+itemListsCrossSellingTypeBundle = Bundle
 itemLists1ListTypeLabel = First item list
 itemListsListTypeLastSeen = Last seen
 itemListsListTypeCrossSelling = Cross-selling
