CHANGE LiveShoppingWidget - add option to show/hide the timer, stock and progress bars

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -187,6 +187,10 @@ liveShoppingTimerValueTimerAndStock = "Timer und Bestand"
 liveShoppingShowCrossPriceLabel = "Streichpreis anzeigen"
 liveShoppingCustomImagePathLabel = "Bildauswahl"
 liveShoppingCustomImagePathTooltip = "Bildauswahl"
+liveShoppingShowTimerLabel = "Timer"
+liveShoppingShowTimerProgressLabel = "Balken für Zeit"
+liveShoppingShowStockLabel = "Bestand"
+liveShoppingShowStockProgressLabel = "Balken für Bestand"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
