--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -187,6 +187,10 @@ liveShoppingTimerValueTimerAndStock = "Timer and stock"
 liveShoppingShowCrossPriceLabel = "Display strikethrough price"
 liveShoppingCustomImagePathLabel = "Image selection"
 liveShoppingCustomImagePathTooltip = "Image selection"
+liveShoppingShowTimerLabel = "Timer"
+liveShoppingShowTimerProgressLabel = "Balken für Zeit"
+liveShoppingShowStockLabel = "Bestand"
+liveShoppingShowStockProgressLabel = "Balken für Bestand"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Text editor"
