CHANGE Widget.properties - update translations for LiveShoppingWidget settings

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -187,10 +187,10 @@ liveShoppingTimerValueTimerAndStock = "Timer und Bestand"
 liveShoppingShowCrossPriceLabel = "Streichpreis anzeigen"
 liveShoppingCustomImagePathLabel = "Bildauswahl"
 liveShoppingCustomImagePathTooltip = "Bildauswahl"
-liveShoppingShowTimerLabel = "Timer"
-liveShoppingShowTimerProgressLabel = "Balken für Zeit"
-liveShoppingShowStockLabel = "Bestand"
-liveShoppingShowStockProgressLabel = "Balken für Bestand"
+liveShoppingShowTimerLabel = "Timer anzeigen"
+liveShoppingShowTimerProgressLabel = "Zeitabhängigen Fortschrittsbalken anzeigen"
+liveShoppingShowStockLabel = "Bestand anzeigen"
+liveShoppingShowStockProgressLabel = "Bestandsabhängigen Fortschrittsbalken anzeigen"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
