--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -187,10 +187,10 @@ liveShoppingTimerValueTimerAndStock = "Timer and stock"
 liveShoppingShowCrossPriceLabel = "Display strikethrough price"
 liveShoppingCustomImagePathLabel = "Image selection"
 liveShoppingCustomImagePathTooltip = "Image selection"
-liveShoppingShowTimerLabel = "Timer"
-liveShoppingShowTimerProgressLabel = "Balken für Zeit"
-liveShoppingShowStockLabel = "Bestand"
-liveShoppingShowStockProgressLabel = "Balken für Bestand"
+liveShoppingShowTimerLabel = "Display timer"
+liveShoppingShowTimerProgressLabel = "Display time-dependent progress bar"
+liveShoppingShowStockLabel = "Display stock"
+liveShoppingShowStockProgressLabel = "Display stock-dependent prograss bar"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Text editor"
