--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -291,7 +291,7 @@ legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
 liveShoppingOfferEndsIn = "Angebot endet in:"
-liveShoppingRemainingStock = "Noch :quantityRemaining von :quantityMax übrig"
+liveShoppingRemainingStock = "Noch :quantityRemaining von :quantityMax verfügbar"
 liveShoppingRebate = "Sie sparen :rebate%"
 liveShoppingDays = "Tage"
 liveShoppingHours = "Stunden"
