--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -159,6 +159,56 @@ listIconTooltip = "Icon für Listeneinträge auswählen."
 listLabel = "Liste"
 listTextLabel = "Listeneintrag"
 listTextTooltip = "Text für einen Listeneintrag eingeben."
+; Mail Form
+mailFormLabel = "E-Mail-Formular"
+mailFormHeadlineLabel = "Titel"
+mailFormHeadlineTooltip = "Titel des Formulars"
+mailFormSubmitLabel = "Button-Text"
+mailFormSubmitTooltip = "Beschriftung des Senden-Buttons"
+mailFormMailTargetLabel = "E-Mail-Adresse"
+mailFormMailTargetTooltip = "Formular-Daten an diese Adresse senden"
+mailFormSubjectLabel = "Betreff"
+mailFormSubjectTooltip = "Betreff der E-Mail"
+mailFormCCAddressesLabel = "Empfänger (CC)"
+mailFormCCAddressesTooltip = "Zusätzlich an diese Addresse senden"
+; Form Inputs
+mailFormFieldLabelLabel = "Bezeichnung"
+mailFormFieldLabelTooltip = "Bezeichnung des Felds im Formular"
+mailFormFieldWidthLabel = "Breite"
+mailFormFieldWidthTooltip = "Breite des Formular-Felds"
+mailFormFieldWidth25 = "25%"
+mailFormFieldWidth33 = "33%"
+mailFormFieldWidth50 = "50%"
+mailFormFieldWidth66 = "66%"
+mailFormFieldWidth75 = "75%"
+mailFormFieldWidth100 = "100%"
+mailFormFieldIsRequiredLabel = "Pflichtfeld"
+mailFormFieldIsRequiredTooltip = "Angabe ist verpflichtend"
+; Text input
+textInputLabel = "Textfeld (einzeilig)"
+textInputIsMailSubjectLabel = "Als Betreff verwenden"
+textInputIsMailSubjectTooltip = "Eingabe als Betreff für E-Mail verwenden"
+textInputIsReplyToNameLabel = "Als Antwort-Name verwenden"
+textInputIsReplyToNameTooltip = "Als Name für die Antwort-Addresse der E-Mail verwenden"
+; Textarea
+textAreaLabel = "Textfeld (mehrzeilig)"
+textAreaRowsLabel = "Anzahl der Zeilen"
+textAreaRowsTooltip = "Anzahl der Zeilen der Textbox"
+textAreaFixedHeightLabel = "Höhe fixieren"
+textAreaFixedHeightTooltip = "Veränderung der Höhe durch den Benutzer verhindern"
+; Selection
+selectionLabel = "Auswahlfeld"
+selectionSelectTypeLabel = "Auswahltyp"
+selectionSelectTypeTooltip = "Art der Auswahl"
+selectionSelectTypeDropdown = "Dropdown"
+selectionSelectTypeRadio = "Einfachauswahl"
+selectionSelectTypeCheckbox = "Mehrfachauswahl"
+selectionOptionsLabel = "Auswahloption"
+selectionOptionsTooltip = "Mögliche Option für die Auswahl"
+; Mail Input
+mailInputLabel = "E-Mail-Feld"
+mailInputAllowMailCCLabel = "Kopie an diese Adresse erlauben"
+mailInputReplyToMailLabel = "Als Antwortaddresse verwenden"
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
