FIX type of itemsPerPage in ItemListWidget config

--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -109,6 +109,10 @@ itemListMaxItemsLabel = "Maximum number of items"
 itemListMaxItemsTooltip = "Enter the maximum number of items displayed on the list."
 itemListItemsPerPageLabel = "Number of visible items."
 itemListItemsPerPageTooltip = "Number of items which should be displayed in a row."
+itemListItemsPerPage1 = "1"
+itemListItemsPerPage2 = "2"
+itemListItemsPerPage3 = "3"
+itemListItemsPerPage4 = "4"
 itemListPlaceholderItemName = "Item name"
 itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
