--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -109,6 +109,10 @@ itemListMaxItemsLabel = "Maximale Anzahl an Artikeln"
 itemListMaxItemsTooltip = "Maximale Zahl der in der Liste angezeigten Artikel eingeben."
 itemListItemsPerPageLabel = "Anzahl der sichtbaren Artikel"
 itemListItemsPerPageTooltip = "Anzahl der Artikel, die nebeneinander dargestellt werden sollen"
+itemListItemsPerPage1 = "1"
+itemListItemsPerPage2 = "2"
+itemListItemsPerPage3 = "3"
+itemListItemsPerPage4 = "4"
 itemListPlaceholderItemName = "Artikelname"
 itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
