Make navigation tree filterable by multiple types

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -80,6 +80,7 @@ headerShowCategoryTypesLabel = Kategorietypen, die in der Navigationsleiste ange
 headerShowCategoryTypesAll = Alle
 headerShowCategoryTypesItem = Artikel
 headerShowCategoryTypesContent = Content
+headerShowCategoryTypesBlog = Blog
 headerBasketValuesLabel = Warenkorbinformationen anzeigen
 headerBasketValuesSum = Warenwert
 headerBasketValuesQuantity = Anzahl der Artikel
