--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -80,6 +80,7 @@ headerShowCategoryTypesLabel = Type of categories rendered in the navigation
 headerShowCategoryTypesAll = All
 headerShowCategoryTypesItem = Item
 headerShowCategoryTypesContent = Content
+headerShowCategoryTypesBlog = Blog
 headerBasketValuesLabel = Show shopping cart information
 headerBasketValuesSum = Value of items
 headerBasketValuesQuantity = Quantity of items
