# Updated: * Itemlist widget , added option to filter by manufacturers

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -118,6 +118,7 @@ itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
+itemListManufacturer = "Hersteller"
 ; Item sort
 itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
 itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
