--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -118,6 +118,7 @@ itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
+itemListManufacturer = "Manufacturer"
 ; Item sort
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
