CHANGE LiveShopping - add special tag translations

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -290,12 +290,15 @@ legalDisclosure = "Impressum"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
-liveShoppingOfferEndsIn = "Angebot endet in:"
-liveShoppingRemainingStock = "Noch :quantityRemaining von :quantityMax verfügbar"
-liveShoppingRebate = "Sie sparen :rebate%"
 liveShoppingDays = "Tage"
 liveShoppingHours = "Stunden"
 liveShoppingMinutes = "Minuten"
+liveShoppingNextOffer = "Nächstes Angebot"
+liveShoppingOfferClosed = "Angebot beendet"
+liveShoppingOfferEndsIn = "Angebot endet in:"
+liveShoppingOfferSoldOut = "Angebot ausverkauft"
+liveShoppingRebate = "Sie sparen :rebate%"
+liveShoppingRemainingStock = "Noch :quantityRemaining von :quantityMax verfügbar"
 liveShoppingSeconds = "Sekunden"
 ; liveShopping - liveShopping
 ; login - Login
