--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -290,12 +290,15 @@ legalDisclosure = "Legal disclosure"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
-liveShoppingOfferEndsIn = "Offer ends in:"
-liveShoppingRemainingStock = ":quantityRemaining of :quantityMax left"
-liveShoppingRebate = ":rebate% off"
 liveShoppingDays = "Days"
 liveShoppingHours = "Hours"
 liveShoppingMinutes = "Minutes"
+liveShoppingNextOffer = "Next offer"
+liveShoppingOfferClosed = "Offer closed"
+liveShoppingOfferEndsIn = "Offer ends in:"
+liveShoppingOfferSoldOut = "Offer sold out"
+liveShoppingRebate = ":rebate% off"
+liveShoppingRemainingStock = ":quantityRemaining of :quantityMax left"
 liveShoppingSeconds = "Seconds"
 ; liveShopping - liveShopping
 ; login - Login
