ADD liveshopping translation

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -294,6 +294,7 @@ liveShoppingDays = "Tage"
 liveShoppingHours = "Stunden"
 liveShoppingMinutes = "Minuten"
 liveShoppingNextOffer = "Nächstes Angebot"
+liveShoppingOfferBeginsIn = "Angebot startet in:"
 liveShoppingOfferClosed = "Angebot beendet"
 liveShoppingOfferEndsIn = "Angebot endet in:"
 liveShoppingOfferSoldOut = "Angebot ausverkauft"
