--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -294,6 +294,7 @@ liveShoppingDays = "Days"
 liveShoppingHours = "Hours"
 liveShoppingMinutes = "Minutes"
 liveShoppingNextOffer = "Next offer"
+liveShoppingOfferBeginsIn = "Offer begins in:"
 liveShoppingOfferClosed = "Offer closed"
 liveShoppingOfferEndsIn = "Offer ends in:"
 liveShoppingOfferSoldOut = "Offer sold out"
