Include component templates

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -191,6 +191,8 @@ liveShoppingShowTimerLabel = "Timer anzeigen"
 liveShoppingShowTimerProgressLabel = "Zeitabhängigen Fortschrittsbalken anzeigen"
 liveShoppingShowStockLabel = "Bestand anzeigen"
 liveShoppingShowStockProgressLabel = "Bestandsabhängigen Fortschrittsbalken anzeigen"
+liveShoppingPlaceholderTitle = "Kein Angebot aktiv"
+liveShoppingPlaceholderDescription = "An dieser Stelle wird kein Inhalt angezeigt, bis ein Angebot aktiv ist."
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Texteditor"
