--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -191,6 +191,8 @@ liveShoppingShowTimerLabel = "Display timer"
 liveShoppingShowTimerProgressLabel = "Display time-dependent progress bar"
 liveShoppingShowStockLabel = "Display stock"
 liveShoppingShowStockProgressLabel = "Display stock-dependent prograss bar"
+liveShoppingPlaceholderTitle = "No active offer"
+liveShoppingPlaceholderDescription = "We will showcase the next offer here once it becomes active."
 ; Text
 textLabel = "Text"
 textCodeEditorLabel = "Text editor"
