Check for invalid vue properties before mounting app

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -452,3 +452,4 @@ logDataShowErrorCode = Fehler-Codes anzeigen
 logPerformanceLevelLabel = Performance-Level
 logPerformanceLevelDevelopment = Entwicklungsmodus
 logPerformanceLevelLive = Live-Modus
+logCheckSyntax = Markup vor Initialisierung auf Fehler prüfen
