--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -452,3 +452,4 @@ logDataShowErrorCode = Show error codes
 logPerformanceLevelLabel = Performance level
 logPerformanceLevelDevelopment = Development
 logPerformanceLevelLive = Live
+logCheckSyntax = Check for errors in markup before initialization
