CHANGE AddressSelect - add function to save a contact person for company addresses

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -1,21 +1,13 @@
 ; address - Addressen
-addressSelectedNotAllowed = "Für die ausgewählte Adresse existiert kein passendes Versandprofil."
-addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Lieferziel nicht unterstützt."
-addressShippingChangedWarning="Ihr Versandprofil wurde gewechselt, da die ausgewählte Adresse diese Art von Versandprofil nicht unterstützt."
-addressPostOffice = "Postfiliale"
-addressPackingStation = "Packstation"
-addressPackingStationNumber = "Packstationsnummer"
-addressPostOfficeNumber = "Filialnummer"
-addressPostNummer = "Postnummer"
 addressAddAddress = "Neue Adresse"
-addressPickupLocation = "Abholort"
-addressToPickupStation = "An Packstation/Postfiliale senden"
 addressAdditionalAddress1 = "Adresszusatz 1"
 addressAdditionalAddress2 = "Adresszusatz 2"
 addressAdditionalName = "Namenszusatz"
 addressBirthdate = "Geburtsdatum"
 addressCancel = "Abbrechen"
+addressChangedWarning="Ihre Adresse wurde gewechselt, da das ausgewählte Versandprofil diese Art von Lieferziel nicht unterstützt."
 addressCompany = "Firma"
+addressContactPerson = "Ansprechpartner"
 addressDelete = "Löschen"
 addressEdit = "Bearbeiten"
 addressENAddressLine1 = "Adresszeile 1"
@@ -31,17 +23,26 @@ addressInvoiceAddressInitial = "Bitte geben Sie Ihre Adresse ein"
 addressLastName = "Nachname"
 addressNoAddress = "Noch keine Adresse vorhanden"
 addressNumber = "Nr."
+addressPackingStation = "Packstation"
+addressPackingStationNumber = "Packstationsnummer"
+addressPickupLocation = "Abholort"
 addressPlace = "Ort"
 addressPleaseSelect = "Bitte wählen"
+addressPostNummer = "Postnummer"
+addressPostOffice = "Postfiliale"
+addressPostOfficeNumber = "Filialnummer"
 addressSalutation = "Anrede"
 addressSameAsInvoice = "Lieferadresse gleich Rechnungsadresse"
 addressSave = "Speichern"
+addressSelectedNotAllowed = "Für die ausgewählte Adresse existiert kein passendes Versandprofil."
 addressShippingAddressCreate = "Lieferadresse anlegen"
 addressShippingAddressDelete = "Lieferadresse löschen"
 addressShippingAddressEdit = "Lieferadresse bearbeiten"
+addressShippingChangedWarning="Ihr Versandprofil wurde gewechselt, da die ausgewählte Adresse diese Art von Versandprofil nicht unterstützt."
 addressStreet = "Straße"
 addressTelephone = "Telefon"
 addressTitle = "Titel"
+addressToPickupStation = "An Packstation/Postfiliale senden"
 addressVatNumber = "USt.-Nr."
 addressZip = "PLZ"
 ; address - Addressen
