--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -1,21 +1,13 @@
 ; address - Address
-addressSelectedNotAllowed = "There is no applicable shipping profile for the selected address."
-addressChangedWarning="Your address has been changed since the selected shipping profile does not support this type of delivery destination."
-addressShippingChangedWarning="Your shipping profile has been changed since the selected address does not support this type of shipping profile."
-addressPostOffice = "Post office"
-addressPackingStation = "Packstation"
-addressPackingStationNumber = "Packstation number"
-addressPostOfficeNumber = "Branch number"
-addressPostNummer = "Post number"
 addressAddAddress = "New address"
-addressPickupLocation = "Pickup location"
-addressToPickupStation = "Deliver to Packstation/post office"
 addressAdditionalAddress1 = "Additional address information 1"
 addressAdditionalAddress2 = "Additional address information 2"
 addressAdditionalName = "Additional name"
 addressBirthdate = "Date of birth"
 addressCancel = "Cancel"
+addressChangedWarning="Your address has been changed since the selected shipping profile does not support this type of delivery destination."
 addressCompany = "Company"
+addressContactPerson = "Contact person"
 addressDelete = "Delete"
 addressEdit = "Edit"
 addressENAddressLine1 = "Address line 1"
@@ -31,17 +23,26 @@ addressInvoiceAddressInitial = "Please enter your address"
 addressLastName = "Last name"
 addressNoAddress = "No Address saved"
 addressNumber = "House No."
+addressPackingStation = "Packstation"
+addressPackingStationNumber = "Packstation number"
+addressPickupLocation = "Pickup location"
 addressPlace = "Town"
 addressPleaseSelect = "Please select"
+addressPostNummer = "Post number"
+addressPostOffice = "Post office"
+addressPostOfficeNumber = "Branch number"
 addressSalutation = "Form of address"
 addressSameAsInvoice = "Delivery address same as invoice address"
 addressSave = "Save"
+addressSelectedNotAllowed = "There is no applicable shipping profile for the selected address."
 addressShippingAddressCreate = "Create delivery address"
 addressShippingAddressDelete = "Delete shipping address"
 addressShippingAddressEdit = "Edit delivery address"
+addressShippingChangedWarning="Your shipping profile has been changed since the selected address does not support this type of shipping profile."
 addressStreet = "Street"
 addressTelephone = "Phone number"
 addressTitle = "Title"
+addressToPickupStation = "Deliver to Packstation/post office"
 addressVatNumber = "VAT number"
 addressZip = "Postcode"
 ; address - Address
