CHANGE LiveShopping - add label for the crossprices

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -290,6 +290,7 @@ legalDisclosure = "Legal disclosure"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
+liveShoppingBefore = "Before:"
 liveShoppingDays = "Days"
 liveShoppingHours = "Hours"
 liveShoppingMinutes = "Minutes"
@@ -300,6 +301,7 @@ liveShoppingOfferEndsIn = "Offer ends in:"
 liveShoppingOfferSoldOut = "Offer sold out"
 liveShoppingRebate = ":rebate% off"
 liveShoppingRemainingStock = ":quantityRemaining of :quantityMax left"
+liveShoppingRrp = "RRP:"
 liveShoppingSeconds = "Seconds"
 ; liveShopping - liveShopping
 ; login - Login
