CHANGE LiveShopping - update translations, add price variable to the multilingualism

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -290,7 +290,7 @@ legalDisclosure = "Impressum"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
-liveShoppingBefore = "Statt:"
+liveShoppingBefore = "Statt: <del>:price</del>"
 liveShoppingDays = "Tage"
 liveShoppingHours = "Stunden"
 liveShoppingMinutes = "Minuten"
@@ -301,7 +301,7 @@ liveShoppingOfferEndsIn = "Angebot endet in:"
 liveShoppingOfferSoldOut = "Angebot ausverkauft"
 liveShoppingRebate = "Sie sparen :rebate%"
 liveShoppingRemainingStock = "Noch :quantityRemaining von :quantityMax verfügbar"
-liveShoppingRrp = "UVP:"
+liveShoppingRrp = "UVP: <del>:price</del>"
 liveShoppingSeconds = "Sekunden"
 ; liveShopping - liveShopping
 ; login - Login
