--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -290,7 +290,7 @@ legalDisclosure = "Legal disclosure"
 legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; liveShopping - liveShopping
-liveShoppingBefore = "Before:"
+liveShoppingBefore = "Before: <del>:price</del>"
 liveShoppingDays = "Days"
 liveShoppingHours = "Hours"
 liveShoppingMinutes = "Minutes"
@@ -301,7 +301,7 @@ liveShoppingOfferEndsIn = "Offer ends in:"
 liveShoppingOfferSoldOut = "Offer sold out"
 liveShoppingRebate = ":rebate% off"
 liveShoppingRemainingStock = ":quantityRemaining of :quantityMax left"
-liveShoppingRrp = "RRP:"
+liveShoppingRrp = "RRP: <del>:price</del>"
 liveShoppingSeconds = "Seconds"
 ; liveShopping - liveShopping
 ; login - Login
